<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:name="edu.sfsu.csc780.chathub.ui.fragments.MessagesListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    app:layoutManager="LinearLayoutManager"
    tools:context="foodrev.org.foodrev.presentation.ui.activities.rapidprototype.messaging.ui.fragments.MessagesListFragment"
    tools:listitem="@layout/item_found_message" />