<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_white"
            android:title="Profile"/>
        <item
            android:id="@+id/nav_coordinator"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="Coordinator mode"/>
        <item
            android:id="@+id/nav_driver"
            android:icon="@drawable/ic_driver"
            android:title="Driver mode"/>
        <item
            android:id="@+id/nav_donor"
            android:icon="@drawable/ic_donation"
            android:title="Donor mode"/>
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_community"
            android:title="Community mode"/>
        <item
            android:id="@+id/nav_messaging"
            android:icon="@drawable/ic_action_action_search"
            android:title="Messaging mode"/>
        <item
            android:id="@+id/nav_json"
            android:icon="@drawable/ic_action_action_search"
            android:title="JSON Population"/>
        <item
            android:id="@+id/nav_ai"
            android:icon="@drawable/ic_action_action_search"
            android:title="AI UI"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="Sign out"/>
    </group>

</menu>
